# fastapi_jwt_cookie_authentification

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
fastapi_auth/: main.py  model.py  router.py  server.py  settings.py
tests/: conftest.py  test_auth.py
