[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"
async-fastapi-jwt-auth = "^0.6.2"
fastapi = "0.100.1"
uvicorn = "^0.27.0.post1"
pytest = "^8.0.0"
pytest-freezer = "^0.4.8"
mypy = "^1.8.0"
ruff = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = ["async_fastapi_jwt_auth", "async_fastapi_jwt_auth.exceptions"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "B",  # bugbear
    "I",  # isort
    "RUF", # ruff
    "UP", # pyupgrade
]

ignore = [
    "B905",  # `zip()` without an explicit `strict=` parameter
    "RUF012",  # mutable default values in class attributes
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]